--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "react-slick": "^0.27.10"
   },
   "scripts": {
     "start": "react-scripts start",
