--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-reveal": "^1.2.2",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
-    "react-slick": "^0.27.10"
+    "react-slick": "^0.27.10",
+    "react-tilt": "^0.1.4",
+    "react-typing-effect": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
